# facturador

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
crates/afip/: Cargo.toml
crates/afip/src/: cert.rs  config.rs  error.rs  lib.rs  types.rs  wsaa.rs  wsfe.rs  xml.rs
crates/arquita/: Cargo.toml
crates/arquita/src/: main.rs
src/: index.ts  types.ts
src/commands/: authorize-certificate.ts  generate-certificate.ts
