[workspace]
resolver = "3"
members = ["crates/afip", "crates/arquita"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Tomás Migone"]
repository = "https://github.com/tmigone/facturador"

[workspace.dependencies]
afip = { path = "crates/afip" }

# Shared third-party dependencies (modern, pinned)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = "thin"
