[package]
name = "arquita"
description = "CLI to issue Argentine electronic invoices (Factura C) against ARCA/AFIP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "arquita"
path = "src/main.rs"

[dependencies]
afip = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
